<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="name">Name</string>
    <string name="ciunas_home_automation">Ciunas Home Automation</string>
    <string name="ciunas_home_automation1">Ciunas Home Automation</string>
    <string name="audio_player">Audio PLayer</string>
    <string name="lights">Lights</string>
    <string name="water_plants">Water Plants</string>
</resources>
