<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@android:color/holo_blue_dark"
        tools:context="com.example.ciunas.myapplication.MainActivity">

    <Button
            android:text="@string/audio_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:id="@+id/button1"
            tools:ignore="UnknownId"
            android:textAlignment="center"
            android:layout_marginStart="20dp" android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true" android:layout_alignEnd="@+id/textView2"/>
    <Button
            android:text="@string/water_plants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_below="@+id/button1" android:layout_alignStart="@+id/button1"
            android:layout_marginTop="55dp" android:layout_alignEnd="@+id/button1"/>
    <Button
            android:text="@string/lights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_below="@+id/button2" android:layout_alignStart="@+id/button2"
            android:layout_marginTop="51dp" android:layout_alignEnd="@+id/button2"/>
    <Button
            android:text="@string/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_below="@+id/button3" android:layout_alignStart="@+id/button3"
            android:layout_marginTop="58dp" android:layout_alignEnd="@+id/button3"/>
    <TextView
            android:text="@string/ciunas_home_automation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/textView2"
            android:textSize="30sp" android:textStyle="normal|bold" android:textAlignment="center"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginStart="22dp" tools:ignore="RelativeOverlap"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/index"
            android:id="@+id/imageView1"
            tools:ignore="ContentDescription"
            android:layout_above="@+id/button2" android:layout_alignStart="@+id/imageView"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/sym_def_app_icon"
            android:id="@+id/imageView"
            android:contentDescription=""
            tools:ignore="ContentDescription"
            android:layout_alignTop="@+id/textView2" android:layout_toEndOf="@+id/textView2"
            android:layout_marginStart="28dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/platsarealive"
            android:id="@+id/imageView4" tools:ignore="ContentDescription" android:layout_alignTop="@+id/button2"
            android:layout_toEndOf="@+id/button2" android:layout_marginStart="14dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/lamp"
            android:id="@+id/imageView5"
            android:contentDescription=""
            tools:ignore="ContentDescription"
            android:layout_alignTop="@+id/button3" android:layout_alignStart="@+id/imageView4"/>
</RelativeLayout>
